After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672596 - help doesn't work
help doesn't work
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-22 00:43 UTC by Matthias Clasen
Modified: 2012-03-26 10:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use help:empathy to open the help (2.88 KB, patch)
2012-03-22 09:10 UTC, Guillaume Desmottes
committed Details | Review
Use correct help URI syntax (1.28 KB, patch)
2012-03-24 01:22 UTC, Shaun McCance
committed Details | Review

Description Matthias Clasen 2012-03-22 00:43:14 UTC
Both in empathy and in empathy-chat, using the Help>Contents menuitem leads to


The URI ‘ghelp:empathy’ does not point to a valid page.
Comment 1 Vincent Untz 2012-03-22 08:59:14 UTC
help:empathy works, so I guess it should be changed.
Comment 2 Guillaume Desmottes 2012-03-22 09:10:49 UTC
Created attachment 210315 [details] [review]
Use help:empathy to open the help

Looks like the new doc infra uses "help" rather than "ghelp".
Comment 3 Xavier Claessens 2012-03-22 09:27:24 UTC
+1
Comment 4 André Klapper 2012-03-22 09:44:56 UTC
In case you ask for a hard code freeze exception from the release-team, this is at least my approval to commit this (you need two).
Comment 5 Guillaume Desmottes 2012-03-22 11:59:03 UTC
Attachment 210315 [details] pushed as 311b718 - Use help:empathy to open the help
Comment 6 Shaun McCance 2012-03-24 01:20:34 UTC
This isn't correct. Everything will go to the index page because the page IDs aren't specified right.
Comment 7 Shaun McCance 2012-03-24 01:22:45 UTC
Created attachment 210499 [details] [review]
Use correct help URI syntax
Comment 8 Guillaume Desmottes 2012-03-26 07:10:03 UTC
Review of attachment 210499 [details] [review]:

Looks good. I'll ask for another freeze exception; thanks!