Use help:empathy to open the help

Looks like the new doc infra uses "help" rather than "ghelp".

https://bugzilla.gnome.org/show_bug.cgi?id=672596